Deploy/kustomize/overlays/prod/3-vite-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vite-ingress
  namespace: dev
  labels:
    app: vite-react-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: panchanandevops.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vite-service
                port:
                  number: 8080
